--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <!-- Marvel Font -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Marvel" />
 
-    <title>React App</title>
+    <title>Giphy App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
